--- a/Landing Page Mind Cuida/index.html
+++ b/Landing Page Mind Cuida/index.html
@@ -79,7 +79,9 @@
                 conformada por un conjunto de jóvenes de la Universidad Peruana
                 de Ciencias Aplicadas, quienes están entusiasmados por emplear la
                 tecnologia con el propósito de abordar desafiós y brindar asistencia
-                a la sociedad
+                a la sociedad jijijijajijijiajijaijaijaijaijaijaiajijaiajijiajia
+                    iaisjiaskjasjaks
+                    aklsaslkasklas
             </p>
             </div>
             <img id="img3" src="img/personas.webp" alt="Linda imagen">
