--- a/Landing Page Mind Cuida/index.html
+++ b/Landing Page Mind Cuida/index.html
@@ -81,7 +81,16 @@
                 tecnologia con el propósito de abordar desafiós y brindar asistencia
                 a la sociedad jijijijajijijiajijaijaijaijaijaijaiajijaiajijiajia
                     iaisjiaskjasjaks
-                    aklsaslkasklas
+                    aklsaslkasklas weeeeeeeeeeeeeeeeeeeeeeeeck ksdlslkdskld aksjdksajfioasjfioas sadkojfdjsf
+                    sdnmvksdjmvckosdmvdks
+                    sxzmvxczklvmklxzcvmklxzñclkxzmckjzxnc zxkjvnclxzkmckmzxncmzzs czioxvnasjknvzxvxc v sdzvzxvzx v
+                    zx vjkxzcnvkzdmvklcxzc dcsx vzdxv zx
+                    }f  c fsxd xd
+                     s sd 
+                    sd 
+                    s lksdzmnvjkzndckjhzxklvczxklclñzxc
+                    zxm klxzcmvjdsiuvhsaduijvkzxñlvz
+                    
             </p>
             </div>
             <img id="img3" src="img/personas.webp" alt="Linda imagen">
