--- a/Landing Page Mind Cuida/index.html
+++ b/Landing Page Mind Cuida/index.html
@@ -79,18 +79,7 @@
                 conformada por un conjunto de jóvenes de la Universidad Peruana
                 de Ciencias Aplicadas, quienes están entusiasmados por emplear la
                 tecnologia con el propósito de abordar desafiós y brindar asistencia
-                a la sociedad jijijijajijijiajijaijaijaijaijaijaiajijaiajijiajia
-                    iaisjiaskjasjaks
-                    aklsaslkasklas weeeeeeeeeeeeeeeeeeeeeeeeck ksdlslkdskld aksjdksajfioasjfioas sadkojfdjsf
-                    sdnmvksdjmvckosdmvdks
-                    sxzmvxczklvmklxzcvmklxzñclkxzmckjzxnc zxkjvnclxzkmckmzxncmzzs czioxvnasjknvzxvxc v sdzvzxvzx v
-                    zx vjkxzcnvkzdmvklcxzc dcsx vzdxv zx
-                    }f  c fsxd xd
-                     s sd 
-                    sd 
-                    s lksdzmnvjkzndckjhzxklvczxklclñzxc
-                    zxm klxzcmvjdsiuvhsaduijvkzxñlvz
-                    
+                a la sociedad 
             </p>
             </div>
             <img id="img3" src="img/personas.webp" alt="Linda imagen">
